fix: stretch legend problem

--- a/x-pack/plugins/lens/public/editor_frame_service/editor_frame/_workspace_panel_wrapper.scss
+++ b/x-pack/plugins/lens/public/editor_frame_service/editor_frame/_workspace_panel_wrapper.scss
@@ -36,3 +36,7 @@
     }
   }
 }
+
+.lnsWorkspacePanelUpperControl {
+  margin-bottom: $euiSizeS;
+}
